--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -438,10 +438,10 @@ html {
 }
 
 /* Invert architecture diagram in dark mode for better visibility */
-:root img[src*='img2.png'] {
+:root .architecture-diagram img {
 	filter: invert(1);
 }
 
-:root[data-theme='light'] img[src*='img2.png'] {
+:root[data-theme='light'] .architecture-diagram img {
 	filter: none;
 }
