--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -156,6 +156,11 @@ header .social-icons svg:hover {
 .hero {
 	padding: 4rem 0;
 	position: relative;
+	background: none!important;
+}
+
+.hero::before {
+	background: none!important;
 }
 
 /* Ensure hero content is above overlay */
@@ -203,6 +208,7 @@ html {
 .hero-section {
 	position: relative;
 	overflow: hidden;
+	
 }
 
 .wave-container {
@@ -216,6 +222,7 @@ html {
 	z-index: 50;
 	pointer-events: none;
 	opacity: 0.8;
+	
 
 }
 
