proper footer with license

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,4 +2,4 @@
 const date = new Date();
 const year = date.getFullYear(); 
 ---
-<footer>&copy; {year} TidesDB, all rights reserved.</footer>
+<footer>&copy; {year} TidesDB • Licensed under <a href="https://mozilla.org/MPL/2.0/">MPL-2.0</a></footer>
