--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -248,11 +248,28 @@ html {
 	height: 300px;
 	overflow: hidden;
 	line-height: 0;
-	z-index: 50;
+	z-index: 0;
 	pointer-events: none;
 	opacity: 0.8;
-	
+}
 
+.display-current {
+	font-weight: 600;
+	margin-top: 3px;
+}
+
+.isMobile li a {
+	border: none;
+}
+
+.dropdown { 
+	border: none;
+	box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
+
+.toggle {
+	background: none;
+	border: none!important;
 }
 
 .wave {
