--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -266,6 +266,11 @@ html {
 	box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 }
 
+input[type="search"]:focus, input[type="text"]:focus {
+	outline: none;
+	box-shadow: none;
+}
+
 .toggle {
 	background: none;
 	border: none!important;
