--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -622,3 +622,22 @@ input[type="select"]:focus, select:focus {
 	color: var(--sl-color-accent-high)!important;
 }
 }
+
+.historic {
+	background: rgb(223, 51, 8);
+	padding: 1rem;
+	border-radius: 8px;
+	margin: 1rem 0;
+	color: white;
+}
+
+.historic span {
+	font-weight: bold;
+	margin-right: 0.5rem;
+	display: inline-block;
+	font-size: 1.8rem;
+	line-height: 1;
+	vertical-align: middle;
+	margin-top: -0.2rem;
+}
+	
