--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -640,4 +640,71 @@ input[type="select"]:focus, select:focus {
 	vertical-align: middle;
 	margin-top: -0.2rem;
 }
+
+/* Article hero image with parallax effect */
+.article-image {
+	position: relative;
+	width: 100%;
+	margin-top: 2rem;
+	margin-bottom: 3rem;
+	height: 320px;
+	overflow: hidden;
+	border-radius: 32px;
+	box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+}
+
+.article-image::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: linear-gradient(
+		180deg,
+		transparent 0%,
+		rgba(10, 37, 64, 0.3) 100%
+	);
+	z-index: 1;
+	pointer-events: none;
+}
+
+.article-image img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	object-position: center;
+	transform: scale(1.1);
+	transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+	will-change: transform;
+}
+
+.article-image:hover img {
+	transform: scale(1.15);
+}
+
+.article-image p {
+	margin: 0;
+	height: 100%;
+}
+
+.article-image p img {
+	display: block;
+}
+
+@media (max-width: 768px) {
+	.article-image {
+		width: calc(100% + 2rem);
+		margin-left: -1rem;
+		margin-right: -1rem;
+		height: 200px;
+		border-radius: 12px;
+	}
+}
+
+@media (min-width: 1200px) {
+	.article-image {
+		height: 320px;
+	}
+}
 	
