--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -499,12 +499,14 @@ input[type="search"]:focus, input[type="text"]:focus {
 }
 
 .architecture-diagram img {
-	border-radius: 20px;
+	box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
+	border-radius: 28px;
+	filter: brightness(115%)!important;
 }
 
 /* Invert architecture diagram in dark mode for better visibility */
 :root .architecture-diagram img {
-	filter: invert(100%) hue-rotate(180deg);
+	filter: invert(100%) hue-rotate(180deg) brightness(100%)!important;
 
 }
 
