--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,4 +2,4 @@
 const date = new Date();
 const year = date.getFullYear(); 
 ---
-<footer>&copy; {year} TidesDB • Licensed under <a href="https://mozilla.org/MPL/2.0/">MPL-2.0</a> | <a href="https://tidesdb.com/sponsors">Sponsors</a></footer>
+<footer>&copy; 2023-{year} TidesDB • Licensed under <a href="https://mozilla.org/MPL/2.0/">MPL-2.0</a> | <a href="https://tidesdb.com/sponsors">Sponsors</a></footer>
