mainly tidesql documentation and article on benchmarks against inno within maria

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -702,6 +702,11 @@ canvas {
 	will-change: transform;
 }
 
+.ob-bottom {
+	object-fit: cover;
+	object-position: bottom;
+}
+
 .article-image:hover img {
 	transform: scale(1.15);
 }
